--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,6 +40,17 @@ input[type=number] {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     
   }
+  .navbar-toggler {
+    padding: 1rem 10rem;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-weight: bold;
+    display: inline-block;
+    position: absolute;
+    top: -6rem;
+    left: -2.5rem;
+  }
   
   .card-body {
     margin-top: 2rem;
@@ -79,6 +90,10 @@ input[type=number] {
     font-weight: bold !important;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   }
+  .createBtn {
+    background: #7673f8 !important;
+    color: black !important;
+  }
   
   .chatrooms {
     margin-top: 2rem;
@@ -102,3 +117,4 @@ input[type=number] {
     text-decoration: none;
     color: #333;
   }
+  
